<?xml version="1.0"?>
<package>
  <name>offset_tuner_server</name>
  <version>0.0.0</version>
  <description>The offset_tuner_server package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="robotemperor@todo.todo">robotemperor</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>heroehs_math</build_depend> 

  <build_depend>alice_base_module</build_depend>
  

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>robotis_math</run_depend>
  <run_depend>robotis_framework_common</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
